Changed kitchen images; fixed clipping of video

--- a/_harp/css/style.less
+++ b/_harp/css/style.less
@@ -50,7 +50,7 @@ body{
         display:block;
       }
       div.title{
-        font-size:2.8em;
+        font-size:2.5em;
       }
     }
     @media screen and (max-width: 500px){
@@ -73,6 +73,10 @@ body{
       font-size:1.25em;
     }
   }
+  .banner-wrapper{
+    background-color: black;
+    width:100%;
+  }
   .banner{
     overflow: hidden;
     // z-index: -100;
@@ -85,6 +89,8 @@ body{
     // background-attachment: fixed;
     // background-color: rgb(26,26,26);
     max-height:500px;
+    max-width: 860px;
+    margin:0 auto;
     // background-position: center center;
     // background-size: cover;
   }
